examples/negative-tests/reverse.imp
reverse(n,p,q) {
  if n = 1 then {
    q := *p
  } else {
    let p' = p + (n-1) in
    q := *p';
    let q' = q + 1 in
    reverse(n-1,p,q');
    alias(q' = q + 1)
  }
}

{
  let p = mkarray 3 in
  p := 4;
  let p' = p + 1 in
  p' := 5;
  let p'' = p' + 1 in
  p'' := 6;
  alias(p'' = p' + 1);
  alias(p' = p + 1);
  let q = mkarray 3 in
  reverse(3,p,q);
  assert(*q = 6);
  let q' = q + 1 in
  assert(*q' = 5);
  let q'' = q' + 1 in
  assert(*q'' = 4)
}
